# aviary3D

./: .gitignore  README.md
aviary-main/: Cargo.toml
aviary-main/src/: main.rs  wgpu_render.rs
aviary-main/src/assets/textures/: example.dds
aviary-main/src/shaders/: default.wgsl
