[package]
name = "aviaryMain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
audionimbus = "0.10.0"
bytemuck = "1.24.0"
cpal = "0.17.0"
env_logger = "0.11.8"
log = "0.4.29"
pollster = "0.4.0"
rapier3d-f64 = "0.31.0"
wgpu = "28.0.0"
winit = "0.30.12"

[dependencies.image]
version = "0.25"
default-features = false
features = ["dds", "png"]
